--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AZHAN Movies - Futuristic</title>
+    <title>AZHAN Movies | Watch Anytime</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <style>
         body {
-            background: linear-gradient(135deg, #0f0f0f, #1a1a1a);
+            background: radial-gradient(ellipse at center, #0f0f0f 0%, #000000 100%);
+            color: white;
         }
 
         .glass {
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(255, 255, 255, 0.06);
             backdrop-filter: blur(14px);
             border: 1px solid rgba(255, 255, 255, 0.08);
-        }
-
-        .neon {
-            background-image: linear-gradient(to right, #00e0ff, #8a2be2);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
         }
 
         .scrollbar-hide::-webkit-scrollbar {
@@ -32,68 +27,152 @@
             -ms-overflow-style: none;
             scrollbar-width: none;
         }
+
+        .neon {
+            background-image: linear-gradient(to right, #00e0ff, #ff00c8);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        body.light-mode {
+            background: #f0f0f0;
+            color: #111;
+        }
+
+        body.light-mode .glass {
+            background: rgba(0, 0, 0, 0.06);
+            color: black;
+        }
+
+        body.light-mode .text-white {
+            color: black !important;
+        }
+
+        body.light-mode .genre-btn {
+            background: linear-gradient(to right, #e0e0e0, #cfcfcf);
+            color: #111 !important;
+            border: 1px solid #bbb;
+        }
+
+        body.light-mode .genre-btn:hover {
+            background-image: linear-gradient(to right, #00e0ff, #ff00c8);
+            color: white !important;
+        }
     </style>
 </head>
 
-<body class="text-white font-sans tracking-wide">
+<body class="text-white font-sans">
 
     <!-- Navbar -->
     <nav class="glass sticky top-0 z-50 w-full shadow-lg">
-        <div class="max-w-7xl mx-auto flex justify-between items-center px-6 h-20">
-            <h1 class="text-3xl font-extrabold neon">AZHAN Movies</h1>
-            <div class="hidden md:flex flex-1 justify-center">
+        <div class="max-w-7xl mx-auto flex justify-between items-center px-4 h-20">
+            <h1 class="text-xl sm:text-2xl md:text-3xl font-extrabold neon whitespace-nowrap">AZHAN Movies</h1>
+
+            <!-- Search Bar Mobile -->
+            <input id="search-mobile" type="search" placeholder="Search..."
+                class="md:hidden flex-1 mx-3 px-4 py-2 rounded-full bg-black text-white border border-pink-400 placeholder-pink-400" />
+
+            <!-- Mobile Menu Button -->
+            <button id="menu-toggle" class="md:hidden text-2xl text-white"><i class="fas fa-bars"></i></button>
+
+            <!-- Desktop Search and Settings -->
+            <div class="hidden md:flex flex-1 justify-center gap-4">
                 <input id="search" type="search" placeholder="Search..."
-                    class="w-full max-w-lg px-5 py-2 rounded-full bg-[#1e1e1e] text-white border border-violet-500 placeholder-violet-400 focus:outline-none focus:ring-2 focus:ring-violet-500" />
+                    class="w-full max-w-lg px-5 py-2 rounded-full bg-black text-white border border-pink-500 placeholder-pink-500 focus:outline-none focus:ring-2 focus:ring-pink-600" />
+                <a href="settings.html" class="ml-4 text-xl hover:text-cyan-400 transition" title="Settings">
+                    <i class="fas fa-cog"></i>
+                </a>
             </div>
-            <button id="menu-toggle" class="md:hidden text-2xl"><i class="fas fa-bars"></i></button>
         </div>
 
-        <!-- Mobile Search -->
+        <!-- Mobile Dropdown Menu -->
         <div id="mobile-menu" class="md:hidden hidden px-4 pb-4">
-            <input id="search-mobile" type="search" placeholder="Search..."
-                class="w-full px-4 py-2 rounded-full bg-[#1e1e1e] text-white border border-cyan-500 placeholder-cyan-400" />
+            <a href="settings.html" class="block text-xl hover:text-cyan-400 transition mt-2">
+                <i class="fas fa-cog mr-2"></i> Settings
+            </a>
         </div>
     </nav>
 
-    <!-- Title -->
-    <h1 class="text-center text-5xl md:text-6xl font-extrabold neon mt-10 mb-8">Explore</h1>
+    <!-- Genre Buttons -->
+    <div class="px-4 md:px-10 mt-6 flex flex-wrap gap-4 justify-center" id="genre-buttons"></div>
 
-    <!-- Search Results -->
-    <div id="search-section" class="hidden px-4 md:px-10 pb-12">
-        <h2 class="text-2xl md:text-3xl font-bold mb-4 text-cyan-300">Search Results</h2>
-        <div id="search-results"
-            class="flex md:grid md:grid-cols-3 lg:grid-cols-4 gap-6 overflow-x-auto md:overflow-visible scrollbar-hide snap-x snap-mandatory">
-        </div>
+    <!-- Search Section -->
+    <section id="search-section" class="hidden px-4 md:px-10 py-8">
+        <h2 class="text-2xl font-bold text-pink-400 mb-4">Search Results</h2>
+        <div id="search-results"></div>
+        <p id="no-results" class="text-center text-xl text-gray-400 mt-10 hidden">No movies found.</p>
+    </section>
 
-        <p id="no-results" class="text-center text-xl text-cyan-400 mt-10 hidden">No match found.</p>
+    <!-- Homepage Sections -->
+    <div id="homepage-sections">
+        <section class="px-4 md:px-10 mt-10 mb-12">
+            <h2 class="text-2xl font-bold text-fuchsia-400 mb-4">🔥 Trending</h2>
+            <div id="trending-container" class="flex gap-5 overflow-x-auto scrollbar-hide"></div>
+        </section>
+
+        <section class="px-4 md:px-10 mb-12">
+            <h2 class="text-2xl font-bold text-cyan-400 mb-4">🌟 Popular</h2>
+            <div id="popular-container" class="flex gap-5 overflow-x-auto scrollbar-hide"></div>
+        </section>
+
+        <section class="px-4 md:px-10 mb-12">
+            <h2 class="text-2xl font-bold text-yellow-400 mb-4">🏆 Top Rated</h2>
+            <div id="toprated-container" class="flex gap-5 overflow-x-auto scrollbar-hide"></div>
+        </section>
+
+        <section class="px-4 md:px-10 mb-12">
+            <h2 class="text-2xl font-bold text-blue-400 mb-4">🆕 New Releases</h2>
+            <div id="newest-container" class="flex gap-5 overflow-x-auto scrollbar-hide"></div>
+        </section>
+
+        <section class="px-4 md:px-10 mb-24">
+            <h2 class="text-2xl font-bold text-pink-400 mb-4">📅 Coming Soon</h2>
+            <div id="upcoming-container" class="flex gap-5 overflow-x-auto scrollbar-hide"></div>
+        </section>
     </div>
 
-    <!-- Popular Section -->
-    <section id="popular-section" class="px-4 md:px-10 mb-12">
-        <h2 class="text-2xl md:text-3xl font-bold mb-4 text-cyan-400">🔥 Popular Movies</h2>
-        <div id="popular-container" class="flex gap-5 overflow-x-auto scrollbar-hide"></div>
-    </section>
-
-    <!-- Newest Section -->
-    <section id="newest-section" class="px-4 md:px-10 mb-24">
-        <h2 class="text-2xl md:text-3xl font-bold mb-4 text-violet-400">🆕 Newest Movies</h2>
-        <div id="newest-container" class="flex gap-5 overflow-x-auto scrollbar-hide"></div>
-    </section>
-
     <!-- Footer -->
-    <footer class="glass text-center py-8 mt-auto border-t border-cyan-800">
-        <h2 class="text-2xl font-bold neon mb-2">AZHAN Movies</h2>
-        <p class="text-sm text-gray-400 mb-2">Your gateway to entertainment. Watch anywhere, anytime.</p>
-        <div class="flex justify-center gap-6 text-xl text-cyan-300 mb-4">
-            <a href="#"><i class="fab fa-facebook hover:text-white transition"></i></a>
-            <a href="#"><i class="fab fa-instagram hover:text-white transition"></i></a>
-            <a href="#"><i class="fab fa-twitter hover:text-white transition"></i></a>
-            <a href="#"><i class="fab fa-youtube hover:text-white transition"></i></a>
+    <footer class="bg-black py-10 px-6 border-t border-gray-800">
+        <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 text-gray-400">
+            <div>
+                <h2 class="text-xl font-bold text-white mb-2">AZHAN Movies</h2>
+                <p>The ultimate streaming universe.</p>
+            </div>
+            <div>
+                <h2 class="text-lg font-semibold text-white mb-2">Explore</h2>
+                <ul class="space-y-1">
+                    <li><a href="#" class="hover:text-white">Home</a></li>
+                    <li><a href="#" class="hover:text-white">Categories</a></li>
+                </ul>
+            </div>
+            <div>
+                <h2 class="text-lg font-semibold text-white mb-2">Stay Updated</h2>
+                <input type="email" placeholder="Email"
+                    class="w-full px-3 py-2 rounded bg-zinc-900 text-white placeholder-gray-500 border border-gray-600" />
+                <button
+                    class="mt-3 w-full py-2 bg-gradient-to-r from-pink-500 to-fuchsia-500 rounded text-white font-semibold hover:brightness-110">Subscribe</button>
+            </div>
+            <div>
+                <h2 class="text-lg font-semibold text-white mb-2">Follow Us</h2>
+                <div class="flex gap-4 text-xl">
+                    <a href="#" class="hover:text-blue-500"><i class="fab fa-facebook"></i></a>
+                    <a href="#" class="hover:text-pink-500"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="hover:text-blue-400"><i class="fab fa-twitter"></i></a>
+                </div>
+            </div>
         </div>
-        <p class="text-sm text-gray-500">&copy; 2025 <span class="text-white font-semibold">AZHAN Movies</span>. All
-            rights reserved.</p>
+        <div class="text-center text-sm text-gray-600 mt-10">&copy; 2025 AZHAN Movies. All rights reserved.</div>
     </footer>
 
+    <!-- Menu toggle -->
+    <script>
+        document.getElementById("menu-toggle").addEventListener("click", () => {
+            const menu = document.getElementById("mobile-menu");
+            menu.classList.toggle("hidden");
+        });
+    </script>
+
+    <!-- Your JS -->
     <script src="app.js"></script>
 </body>
 
