--- a/watch.html
+++ b/watch.html
@@ -1,54 +1,160 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Watch Full Movie</title>
-    <link href="src/output.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <title>Watch Trailer | AZHAN Movies</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <style>
+        body {
+            background: linear-gradient(145deg, #0f0f0f, #1a1a1a);
+        }
+
+        body::before {
+            content: "";
+            position: fixed;
+            inset: 0;
+            z-index: -1;
+            background: radial-gradient(circle at 30% 20%, rgba(0, 255, 255, 0.03), transparent 60%),
+                radial-gradient(circle at 80% 70%, rgba(255, 0, 150, 0.04), transparent 60%),
+                radial-gradient(circle at 50% 50%, rgba(0, 255, 255, 0.03), transparent 70%);
+            animation: bgmove 30s infinite linear;
+        }
+
+        @keyframes bgmove {
+            0% {
+                transform: translate(0, 0);
+            }
+
+            50% {
+                transform: translate(-2%, -2%);
+            }
+
+            100% {
+                transform: translate(0, 0);
+            }
+        }
+
+        .neon {
+            background-image: linear-gradient(to right, #00e0ff, #8a2be2);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .glass {
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(12px);
+            border: 1px solid rgba(255, 255, 255, 0.08);
+        }
+    </style>
 </head>
 
-<body
-    class="bg-gradient-to-b from-[#0f172a] via-[#0b0f19] to-[#111827] text-white min-h-screen flex flex-col items-center justify-start">
+<body class="text-white font-sans flex flex-col min-h-screen">
 
-    <!-- Trailer Box -->
-    <div class="w-full flex justify-center">
-        <div id="trailer-container"
-            class="w-full h-[30vh] sm:h-[55vh] md:h-[70vh] overflow-hidden shadow-lg border-b border-cyan-500/30 bg-black relative">
-            <!-- iframe will be injected here -->
+    <!-- Navbar -->
+    <nav class="glass sticky top-0 z-50 w-full shadow-lg">
+        <div class="max-w-7xl mx-auto flex justify-between items-center px-6 h-20">
+            <a href="index.html" class="text-3xl font-extrabold neon">AZHAN Movies</a>
         </div>
-    </div>
+    </nav>
+    <!-- Main Content -->
+    <main class="flex-grow flex flex-col items-center px-4 py-10">
 
-    <!-- Action Buttons -->
-    <div class="mt-6 flex flex-wrap justify-center gap-4 px-4 w-full">
-        <a href="index.html"
-            class="flex-1 max-w-[200px] px-4 py-3 bg-gradient-to-r from-purple-500 via-pink-500 to-red-500 text-white rounded-full font-semibold text-sm text-center hover:scale-105 transition shadow-md">
-            ← Home
-        </a>
+        <!-- Trailer Section -->
+        <section
+            class="w-full max-w-5xl aspect-video overflow-hidden rounded-2xl border border-cyan-400/20 shadow-lg bg-black relative mb-10">
+            <div id="trailer-container" class="absolute inset-0">
+                <!-- Trailer iframe injected here -->
+            </div>
+        </section>
 
-        <!-- ✅ This button now correctly uses movie.html -->
-        <a id="desc-btn"
-            class="flex-1 max-w-[200px] px-4 py-3 bg-gradient-to-r from-blue-500 via-cyan-500 to-green-500 text-white rounded-full font-semibold text-sm text-center hover:scale-105 transition shadow-md">
-            Description
-        </a>
-    </div>
+        <!-- Action Buttons -->
+        <div class="flex flex-wrap justify-center gap-4 mb-8">
+            <a href="index.html"
+                class="px-6 py-2 text-sm font-semibold rounded-full bg-gradient-to-r from-purple-500 via-pink-500 to-red-500 text-white shadow hover:scale-105 transition">
+                ← Back to Home
+            </a>
+            <a id="desc-btn"
+                class="px-6 py-2 text-sm font-semibold rounded-full bg-gradient-to-r from-blue-500 via-cyan-400 to-green-500 text-white shadow hover:scale-105 transition">
+                View Description
+            </a>
+        </div>
 
-    <!-- Streaming Link Section -->
-    <div id="streaming-link" class="mt-6 text-center px-4"></div>
+        <!-- Streaming Info -->
+        <div id="streaming-link" class="text-center text-gray-300 text-sm max-w-xl mb-10"></div>
 
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-gradient-to-br from-black via-gray-900 to-zinc-900 text-white py-12 px-6 mt-auto">
+        <div class="max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-10">
+
+            <!-- About -->
+            <div>
+                <h2 class="text-2xl font-bold mb-4 text-white drop-shadow-sm">AZHAN Movies</h2>
+                <p class="text-md text-gray-400 leading-relaxed">
+                    Your daily dose of entertainment.<br>Stream the best movies right here,<br>anytime, anywhere.
+                </p>
+            </div>
+
+            <!-- Quick Links -->
+            <div>
+                <h2 class="text-lg font-semibold mb-4 text-white">Quick Links</h2>
+                <ul class="space-y-2 text-md text-gray-400">
+                    <li><a href="index.html" class="hover:text-white transition duration-200">Home</a></li>
+                    <li><a href="#" class="hover:text-white transition duration-200">Contact</a></li>
+                    <li><a href="#" class="hover:text-white transition duration-200">Support</a></li>
+                    <li><a href="#" class="hover:text-white transition duration-200">Privacy Policy</a></li>
+                </ul>
+            </div>
+
+            <!-- Newsletter -->
+            <div>
+                <h2 class="text-lg font-semibold mb-4 text-white">Newsletter</h2>
+                <form class="flex flex-col space-y-3">
+                    <input type="email" placeholder="Your email"
+                        class="px-4 py-2 rounded-md bg-zinc-800 text-white placeholder-gray-400 border border-gray-600 focus:outline-none focus:ring-2 focus:ring-cyan-500" />
+                    <button
+                        class="bg-gradient-to-r from-cyan-500 via-blue-500 to-purple-500 text-white font-semibold px-4 py-2 rounded-md hover:shadow-lg transition">
+                        Subscribe
+                    </button>
+                </form>
+            </div>
+
+            <!-- Social Links -->
+            <div>
+                <h2 class="text-lg font-semibold mb-4 text-white">Follow Us</h2>
+                <div class="flex space-x-5 text-2xl text-gray-400">
+                    <a href="#" class="hover:text-blue-500 transition"><i class="fab fa-facebook"></i></a>
+                    <a href="#" class="hover:text-pink-500 transition"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="hover:text-cyan-400 transition"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="hover:text-red-500 transition"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- Bottom Bar -->
+        <div class="mt-10 text-center text-sm text-gray-500 pt-6 border-t border-gray-700">
+            &copy; 2025 <span class="font-semibold text-white">AZHAN Movies</span>. All rights reserved.
+        </div>
+    </footer>
+
+    <!-- JavaScript -->
     <script>
         const API_KEY = '63f568ca8b3bbb806284ff9e018bee43';
         const BASE_URL = 'https://api.themoviedb.org/3';
         const params = new URLSearchParams(window.location.search);
         const movieId = params.get('id');
 
-        // Inject correct movieId into description button
         if (movieId) {
             document.getElementById("desc-btn").href = `movie.html?id=${movieId}`;
+            getTrailer(movieId);
+            getStreamingLink(movieId);
         }
 
-        // Get Trailer
         async function getTrailer(movieId) {
             const res = await fetch(`${BASE_URL}/movie/${movieId}/videos?api_key=${API_KEY}`);
             const data = await res.json();
@@ -61,41 +167,37 @@
             src="https://www.youtube.com/embed/${trailer.key}"
             frameborder="0"
             allowfullscreen
-            class="absolute top-0 left-0 w-full h-full">
+            class="w-full h-full">
           </iframe>`;
             } else {
-                container.innerHTML = `<p class="text-center text-red-400 p-4">No trailer available.</p>`;
+                container.innerHTML = `<div class="flex items-center justify-center h-full text-red-400 font-semibold">No trailer available.</div>`;
             }
         }
 
-        // On page load
-        if (movieId) {
-            getTrailer(movieId);
-            getStreamingLink(movieId);
+        async function getStreamingLink(movieId) {
+            const res = await fetch(`${BASE_URL}/movie/${movieId}/watch/providers?api_key=${API_KEY}`);
+            const data = await res.json();
+            const providers = data.results?.PK?.flatrate || [];
+            const container = document.getElementById("streaming-link");
+
+            if (providers.length > 0) {
+                const providerName = providers[0].provider_name;
+                const watchURL = `https://www.justwatch.com/pk/movie/${movieId}`;
+                container.innerHTML = `
+          <a href="${watchURL}" target="_blank"
+            class="inline-block px-6 py-3 rounded-full bg-gradient-to-r from-red-500 to-purple-600 text-white font-semibold shadow-md hover:scale-105 transition">
+            🍿 Watch Full Movie on ${providerName}
+          </a>`;
+            } else {
+                container.innerHTML = `<p class="mt-4 text-gray-500">Streaming not available in your region.</p>`;
+            }
         }
-        // // Get Streaming Info (e.g., Netflix, etc.)
-        // async function getStreamingLink(movieId) {
-        //     const res = await fetch(`${BASE_URL}/movie/${movieId}/watch/providers?api_key=${API_KEY}`);
-        //     const data = await res.json();
-        //     const providers = data.results?.PK?.flatrate || [];
-        //     const linkContainer = document.getElementById("streaming-link");
 
-        //     if (providers.length > 0) {
-        //         const provider = providers[0];
-        //         const providerName = provider.provider_name;
-        //         const watchURL = `https://www.justwatch.com/pk/movie/${movieId}`;
-
-        //         linkContainer.innerHTML = `
-        //   <a href="${watchURL}" target="_blank"
-        //     class="inline-block mt-4 px-6 py-3 bg-gradient-to-r from-red-500 via-pink-500 to-purple-600 text-white rounded-full font-semibold shadow-md hover:scale-105 transition">
-        //     🍿 Watch Full Movie on ${providerName}
-        //   </a>`;
-        //     } else {
-        //         linkContainer.innerHTML = `
-        //   <p class="text-gray-400 text-sm mt-4">Full movie not available for streaming in your region.</p>`;
-        //     }
-        // }
-
+        // Mobile menu toggle
+        document.getElementById("menu-toggle")?.addEventListener("click", () => {
+            const menu = document.getElementById("mobile-menu");
+            menu.classList.toggle("hidden");
+        });
     </script>
 </body>
 
